# zs-filecrawler

./: .gitignore  Cargo.nix  Cargo.toml  flake.nix
src/: main.rs  misc.rs  run.rs
