[package]
name = "zs-filecrawler"
description = "crawles files, resumable"
version = "0.1.1"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/zs-filecrawler"

[dependencies]
byte-unit = "4.0"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
digest = "0.10"
globwalk = "0.8"
hex = "0.4"
indicatif = "0.16"
indoc = "1.0"
log = "0.4"
num_cpus = "1.14"
readfilez = "0.3"
sha2 = "0.10"
simplelog = "0.12"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.signal-hook]
version = "0.3"
default-features = false

[dependencies.sled]
version = "0.34"
features = ["compression"]

[profile.release]
lto = true
